--- a/fundamentos/bloco-3/aula-3/exercicio-3b.html
+++ b/fundamentos/bloco-3/aula-3/exercicio-3b.html
@@ -37,7 +37,7 @@
           background: whitesmoke;
       }
 
-      div:nth-of-type(odd) {
+      div:nth-of-type(odd) h3 {
           font-style: italic;
       }
 
