--- a/fundamentos/bloco-3/aula-4/exercicio-final.html
+++ b/fundamentos/bloco-3/aula-4/exercicio-final.html
@@ -6,6 +6,15 @@
   </head>
   <body>
     <!--insira os elementos aqui-->
-    <header><h1>Soco a 80km/h: Conheça o Stomatopoda</h1></header>
+    <header>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a>Página Inicial</a></li>
+            <li><a>Sobre</a></li>
+            <li><a>Contato</a></li>
+        </ul>
+    </nav>
   </body>
 </html>
