--- a/fundamentos/bloco-3/aula-4/exercicio-final.html
+++ b/fundamentos/bloco-3/aula-4/exercicio-final.html
@@ -11,10 +11,17 @@
     </header>
     <nav>
         <ul>
-            <li><a>Página Inicial</a></li>
-            <li><a>Sobre</a></li>
-            <li><a>Contato</a></li>
+            <li><a href="#">Página Inicial</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Contato</a></li>
         </ul>
     </nav>
+    <article>
+        <header>
+            <h2>Fatos sobre o Stomatopoda</h2>
+        </header>
+    </article>
+
+
   </body>
 </html>
