--- a/fundamentos/bloco-3/aula-4/exercicio-final.html
+++ b/fundamentos/bloco-3/aula-4/exercicio-final.html
@@ -17,9 +17,39 @@
         </ul>
     </nav>
     <article>
-        <header>
             <h2>Fatos sobre o Stomatopoda</h2>
-        </header>
+        <section><h3>Informações Gerais</h3>
+        <img src="Imagem_Somato.jpeg" alt="Imagem real do Stomatopoda no fundo do oceano"> 
+        <p>Conhecido como pesadelo dos mares, o Stomatopoda - <em>Odontodactylus scyllarus</em> - é um dos animais mais antigos que ainda vive na terra e, apesar de parecer inofensivo pelo tamanho, o seu golpe costuma ser mortal.</p>
+            <table>
+                <tr>
+                    <td><strong>Reino</strong></td>
+                    <td>Animalia</td>
+                </tr>
+                <tr>
+                    <td><strong>Filo</strong></td>
+                    <td>Arthropoda</td>
+                </tr>
+                <tr>
+                    <td><strong>Subfilo</strong></td>
+                    <td>Crustacea</td>
+                </tr>
+                <tr>
+                    <td><strong>Classe</strong></td>
+                    <td>Malacostraca</td>
+                </tr>
+                <tr>
+                    <td><strong>Subclasse</strong></td>
+                    <td>Hoplocarida</td>
+                </tr>
+                <tr>
+                    <td><strong>Ordem</strong></td>
+                    <td>Stomatopoda</td>
+                </tr>
+            </table>    
+        </section>
+        <section></section>
+        <section></section>
     </article>
 
 
