--- a/fundamentos/bloco-3/aula-4/exercicio-final.html
+++ b/fundamentos/bloco-3/aula-4/exercicio-final.html
@@ -48,9 +48,33 @@
                 </tr>
             </table>    
         </section>
-        <section></section>
-        <section></section>
+        
+        <section><h3>Visão Super Colorida</h3>
+        <img src="Imagem_arco_iris.jpeg" alt="Imagem de um arco-íris sendo formado como uma bomba atômica"> 
+        <p>O Stomatopoda tem uma capacidade de visão impressionante. Enquanto os seres humanos têm três receptores de cores, este singelo animalzinho possui <strong>16 (Dezesseis)</strong> receptores. Dessa forma, imagine que o arco-íris que enxergamos com tamanha beleza com nossa capacidade é percebido como uma verdadeira bomba-atômica de luzes e beleza para o Stomatopoda.</p>
+        
+        </section>
+        <section>
+            <h3>Uma super-força nas apêndices</h3>
+        <img src="Imagem-forca.jpeg" alt="Imagem de um Stomatopoda comendo um cavalo-marinho">     
+        <p>Já pensou levar um soco a uma velocidade de <strong>80 km/h</strong>? Você não entendeu errado, o soco do Stomatopoda pode atingir a marca de <strong>80 km/h</strong>. É estimado que com um décimo dessa velocidade, um ser humano conseguiria arremesar uma bola de baseball no espaço.</p>
+        <p>Por este motivo, não é recomendável se ter um Stomatopoda em um aquário. Além de ser um risco para os demais animais do ambiente, existe uma grande chance de o vidro se quebrar tamanha a força exercida pelo animal.</p>    
+        </section>
+        <section>
+            <h3>Referência Bibliográficas</h3>
+            <ul>
+                <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a></li>
+                <li><a href="https://theoatmeal.com/comics/mantis_shrimp">The OATMEAL</a></li>
+            </ul>
+        </section>
     </article>
+    <aside>
+        <p>Assista a este vídeo mostrando o Stomatopoda em ação:</p>
+        <p><a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" target="_blank">Stomatopoda agindo</a></p>
+    </aside>
+    <footer>
+        <p>Conteúdo compilado por Rodrigo de Castro, 2021.</p>
+    </footer>
 
 
   </body>
