--- a/fundamentos/bloco-3/aula-4/exercicio-final.html
+++ b/fundamentos/bloco-3/aula-4/exercicio-final.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>O Stomatopoda</title>
   </head>
   <body>
     <!--insira os elementos aqui-->
@@ -63,8 +64,8 @@
         <section>
             <h3>Referência Bibliográficas</h3>
             <ul>
-                <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a></li>
-                <li><a href="https://theoatmeal.com/comics/mantis_shrimp">The OATMEAL</a></li>
+                <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">Wikipedia</a></li>
+                <li><a href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">The OATMEAL</a></li>
             </ul>
         </section>
     </article>
